--- a/src/CommonUtilitiesTests/CommonUtilitiesTests.csproj
+++ b/src/CommonUtilitiesTests/CommonUtilitiesTests.csproj
@@ -25,10 +25,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonUtilities\CommonUtilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.Playwright.NUnit" />
     <Using Include="NUnit.Framework" />
     <Using Include="System.Text.RegularExpressions" />
     <Using Include="System.Threading.Tasks" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="BitPadding\" />
   </ItemGroup>
 
 </Project>
