--- a/.gitignore
+++ b/.gitignore
@@ -5,20 +5,14 @@ src/.vs/
 src/CommonUtilities/bin/
 src/CommonUtilities/obj/
 
-src/CommonUtilitiesTests/bin/
-src/CommonUtilitiesTests/obj/
-
 src/Client/bin/
 src/Client/obj/
-
-src/ClientTests/bin/
-src/ClientTests/obj/
 
 src/Server/bin/
 src/Server/obj/
 
-src/ServerTests/bin/
-src/ServerTests/obj/
+src/UnitTests/bin/
+src/UnitTests/obj/
 
 src/IntegrationTests/bin/
 src/IntegrationTests/obj/
