Refactoring of SQL code base. Adding draft of integration tests of database client. Adding doc-strings to database client.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ src/Client/obj/
 src/Server/bin/
 src/Server/obj/
 
+src/Database/bin/
+src/Database/obj/
+
 src/UnitTests/bin/
 src/UnitTests/obj/
 
